# dremio_simple_query

./: .gitignore  combine_markdown_pdf.py  dremio_simple_query_docs.md  pyproject.toml  readme.md  verify_profiles.py
docs/: dremio_simple_query_docs.md
dremiodocs/dremio-cloud/: cloud-api-reference.md  dremio-cloud-about.md  dremio-cloud-admin.md  dremio-cloud-bring-data.md  dremio-cloud-changelog.md  dremio-cloud-developer.md  dremio-cloud-explore-analyze.md  dremio-cloud-get-started.md  dremio-cloud-help-support.md  dremio-cloud-manage-govern.md  dremio-cloud-overview.md  dremio-cloud-security.md  sql-docs.md
dremiodocs/dremio-software/: dremio-software-acceleration.md  dremio-software-admin.md  dremio-software-client-applications.md  dremio-software-data-products.md  dremio-software-data-sources.md  dremio-software-deploy-dremio.md  dremio-software-get-started.md  dremio-software-monitoring.md  dremio-software-reference.md  dremio-software-security.md  dremio-software-v25-api.md  dremio-software-v26-api.md
src/dremio_simple_query/: config.py  connect.py  connectv2.py
src/dremio_simple_query.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_connectv2.py  test_live.py
