[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dremio_simple_query"
version = "0.0.1"
dependencies = [
  'duckdb >= 0.6.1',
  'pyarrow >= 11.0.0'
]
authors = [
  { name="Alex Merced", email="alex.merced@dremio.com" },
]
description = "Simple tool to query Dremio with Apache Arrow Flight"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/developer-advocacy-dremio/dremio_simple_query"
"Bug Tracker" = "https://github.com/developer-advocacy-dremio/dremio_simple_query/issues"