[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dremio_simple_query"
version = "1.0.0"
dependencies = [
  'duckdb >= 1.4.3',
  'pyarrow >= 22.0.0',
  'requests >= 2.32.5',
  'polars >= 1.36.1',
  'pandas >= 2.3.3'

]
authors = [
  { name="Alex Merced", email="alex.merced@dremio.com" },
]
description = "Simple tool to query Dremio with Apache Arrow Flight"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/developer-advocacy-dremio/dremio_simple_query"
"Bug Tracker" = "https://github.com/developer-advocacy-dremio/dremio_simple_query/issues"